# puremvc-c-demo-gtk-employeeadmin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEV_GUIDE.md  LICENSE  README.md  application.c  application.h  main.c  vcpkg.json
include/employee_admin/: i_user_form.h  i_user_list.h  i_user_role.h
model/enum/: dept_enum.c  role_enum.h
model/vo/: role_vo.c  role_vo.h  user_vo.h
src/: application.c  application.h  application_facade.c  application_facade.h  main.c
src/controller/: register_command.c  register_command.h  startup_command.c  startup_command.h
src/model/: role_proxy.c  role_proxy.h  user_proxy.c  user_proxy.h
src/model/enum/: dept_enum.c  dept_enum.h  role_enum.c  role_enum.h
src/model/valueObject/: role_vo.c  role_vo.h  user_vo.c  user_vo.h
src/model/value_object/: role_vo.c  user_vo.c  user_vo.h
src/view/: user_form_mediator.c  user_form_mediator.h  user_list_mediator.c  user_list_mediator.h  user_role_mediator.c  user_role_mediator.h
src/view/components/: user_form.c  user_form.h  user_list.c  user_list.h  user_role.c  user_role.h
test/: CMakeLists.txt
test/model/: role_proxy_test.c  role_proxy_test.h  user_proxy_test.c  user_proxy_test.h
view/components/: user_form.c  user_form.h  user_list.c  user_list.h  user_role.c  user_role.h
